--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,37 +1,68 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:  
-  name: nodejs-deployment  
-  labels:    
-    app: helloworld
-spec:  
-  replicas: 1  
-  selector:    
+metadata:
+  labels:
+    app: location-service
+  name: location-service
+  namespace: default
+spec:
+  replicas: 1
+  selector:
     matchLabels:
-      app: helloworld
+      app: location-service
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
-        app: helloworld
-    spec: 
-     containers:
-      - name: helloworld
-        image: nadyasi/nodejs-helloworld:latest
-        ports:
-        - containerPort: 5000
+        app: location-service
+    spec:
+      containers:
+        - image: gcr.io/location-api-300417/github.com/nadyanis/location-service
+          imagePullPolicy: IfNotPresent
+          name: location-service-1
+---
+apiVersion: autoscaling/v2beta1
+kind: HorizontalPodAutoscaler
+metadata:
+  labels:
+    app: location-service
+  name: location-service-hpa-nzgq
+  namespace: default
+spec:
+  maxReplicas: 5
+  metrics:
+    - resource:
+        name: cpu
+        targetAverageUtilization: 80
+      type: Resource
+  minReplicas: 1
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: location-service
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodejs-service
+  finalizers:
+    - service.kubernetes.io/load-balancer-cleanup
   labels:
-    app: helloworld
+    app: location-service
+  name: location-service-service
+  namespace: default
 spec:
-  type: NodePort
+  clusterIP: 10.76.12.55
+  externalTrafficPolicy: Cluster
   ports:
-  - port: 5000
-    protocol: TCP
-    targetPort: 5000
-    nodePort: 32700
+    - nodePort: 31532
+      port: 80
+      protocol: TCP
+      targetPort: 5004
   selector:
-    app: helloworld
+    app: location-service
+  sessionAffinity: None
+  type: LoadBalancer
